tests/cli/snapshots/cli__commit_msg__commit_msg_edge_manage.snap
---
source: tests/cli/commit_msg.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch main is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will publish the stack without projecting main to the push destination.
