tests/cli/snapshots/cli__commit_msg__commit_msg_squash.snap
---
source: tests/cli/commit_msg.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
(empty)
